--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -8,8 +8,8 @@
   <h1>Hola mundo!</h1>
   <h2>Mi información personal:</h2>
   <ul>
-    <li><strong>Nombre:</strong> <%= info.nombre %></li>
-    <li><strong>Apellido:</strong> <%= info.apellido %></li>
+    <li><strong>Nombres:</strong> <%= info.nombre %></li>
+    <li><strong>Apellidos:</strong> <%= info.apellido %></li>
     <li><strong>Cédula:</strong> <%= info.cedula %></li>
     <li><strong>Sección:</strong> <%= info.seccion %></li>
   </ul>
