--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -281,7 +281,7 @@ nav ul li a:hover {
     padding: 0 1rem 1.5rem;
 }
 
-/* Testimonials */
+/* Testimonios */
 .testimonios {
     padding: 5rem 0;
     text-align: center;
